syntax = "proto3";

package auth;

option go_package = ".;auth";

import "api/google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

service AuthService {
  // Auth
  rpc Register (RegisterRequest) returns (RegisterResponse) {
    option(google.api.http) = {
      post: "/v1/users/register"
      body: "*"
    };
  }

  rpc Login (LoginRequest) returns (LoginResponse) {
    option(google.api.http) = {
      post: "/v1/users/login"
      body: "*"
    };
  }

  rpc Logout (LogoutRequest) returns (LogoutResponse) {
    option(google.api.http) = {
      post: "/v1/users/logout"
      body: "*"
    };
  }
  rpc ValidateToken (ValidateTokenRequest) returns (ValidateTokenResponse) {
    option(google.api.http) = {
      post: "/v1/users/validate"
      body: "*"
    };
  }
  
  // Users
  rpc GetMe (GetMeRequest) returns (UserResponse) {
    option(google.api.http) = {
      get: "/v1/users/me"
    };
  }

  rpc GetUser (GetUserRequest) returns (UserResponse) {
    option(google.api.http) = {
      get: "/v1/users/{user_id}"
    };
  }

  rpc UpdateMe (UpdateMeRequest) returns (UserResponse) {
    option (google.api.http) = {
      patch: "/v1/users/me"
      body: "*"
    };
  }
  
  // Friends
  rpc AddFriend (AddFriendRequest) returns (FriendResponse) {
    option (google.api.http) = {
      post: "/v1/users/friends/add"
      body: "*"
    };
  }

  rpc RemoveFriend (RemoveFriendRequest) returns (FriendResponse) {
    option (google.api.http) = {
      post: "/v1/users/friends/remove"
      body: "*"
    };
  }

  rpc GetFriends (GetFriendsRequest) returns (FriendsListResponse) {
    option (google.api.http) = {
      post: "/v1/user/friends"
      body: "*"
    };
  }

  // Quizzez
  rpc AddFavoriteQuiz (AddFavoriteQuizRequest) returns (FavoriteQuizResponse) {}

  rpc GetFavoriteQuizzes (GetFavoriteQuizzesRequest) returns (FavoriteQuizzesResponse) {
    option(google.api.http) = {
      get: "/v1/users/favorites/quizzes"
    };
  }

  rpc RemoveFavoriteQuiz (RemoveFavoriteQuizRequest) returns (FavoriteQuizResponse) {
    option(google.api.http) = {
      post: "/v1/users/favorites/quizzes/remove"
      body: "*"
    };
  }
}

// Messages for Favorites quizzes
message AddFavoriteQuizRequest {
  string token = 1;
  string quiz_id = 2;
}

message RemoveFavoriteQuizRequest {
  string token = 1;
  string quiz_id = 2;
}

message GetFavoriteQuizzesRequest {
  string token = 1;
}

message FavoriteQuizResponse {
  bool success = 1;
  string message = 2;
}

message FavoriteQuizzesResponse {
  repeated string quiz_ids = 1;
}


// Messages for Auth
message RegisterRequest {
  string email = 1;
  string password = 2;
  string username = 3;
}

message RegisterResponse {
  string user_id = 1;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
  UserResponse user = 2;
}

message LogoutRequest {
  string token = 1;
}

message LogoutResponse {
  bool success = 1;
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
  UserResponse user = 2;
}

// Messages for Users
message GetMeRequest {
  string token = 1;
}

message UpdateMeRequest {
  string token = 1;
  optional string username = 2;
  optional string email = 3;
  optional string password = 4;
}

message GetUserRequest {
  string token = 1;
  string user_id = 2;
}

message UserResponse {
  string id = 1;
  string username = 2;
  string email = 3;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
}

// Messages for Friends
message AddFriendRequest {
  string token = 1;
  string friend_id = 2;
}

message RemoveFriendRequest {
  string token = 1;
  string friend_id = 2;
}

message GetFriendsRequest {
  string token = 1;
}

message FriendResponse {
  bool success = 1;
  string message = 2;
}

message FriendsListResponse {
  repeated UserResponse friends = 1;
}